force-app/src/objects/OrderApi__Subscription__c.object
<CustomObject>
    <fields>
        <fullName>OrderApi__Suspended_Reason__c</fullName>
        <description>** Conditionally Required System Calculated Override ** Select the most appropriate reason for suspending the Subscription. Required when a Subscription status is &quot;Suspended&quot;.</description>
        <inlineHelpText>** Conditionally Required System Calculated Override ** Select the most appropriate reason for suspending the Subscription. Required when a Subscription status is &quot;Suspended&quot;.</inlineHelpText>
        <label>Suspended Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Past Due</fullName>
                </value>
                <value>
                    <fullName>Payment Method Declined</fullName>
                </value>
                <value>
                    <fullName>Payment Method Expired</fullName>
                </value>
                <value>
                    <fullName>Payment Method Inactive</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__System_Refresh__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Refresh Subscription fields with updated data as well as update related Invoices and Scheduled Payments (if applicable) related to the Subscription.</description>
        <inlineHelpText>Refresh Subscription fields with updated data as well as update related Invoices and Scheduled Payments (if applicable) related to the Subscription.</inlineHelpText>
        <label>Refresh</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Term_Active_Assignments__c</fullName>
        <description>System Calculated ** Counts the number of assignments that are marked active for the term.</description>
        <inlineHelpText>System Calculated ** Counts the number of assignments that are marked active for the term.</inlineHelpText>
        <label>Term Active Assignments</label>
        <summarizedField>OrderApi__Renewal__c.OrderApi__Active_Assignments__c</summarizedField>
        <summaryFilterItems>
            <field>OrderApi__Renewal__c.OrderApi__Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderApi__Renewal__c.OrderApi__Subscription__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OrderApi__Term_Assignments_Allowed__c</fullName>
        <description>System Calculated ** The number of Assignments allowed for the term.</description>
        <inlineHelpText>System Calculated ** The number of Assignments allowed for the term.</inlineHelpText>
        <label>Term Assignments Allowed</label>
        <summarizedField>OrderApi__Renewal__c.OrderApi__Assignments_Allowed__c</summarizedField>
        <summaryFilterItems>
            <field>OrderApi__Renewal__c.OrderApi__Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderApi__Renewal__c.OrderApi__Subscription__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OrderApi__Term_Dues_Total__c</fullName>
        <description>System Calculated ** The sum of the &quot;Total&quot; field for all related Subscription Lines related to the active Term.</description>
        <inlineHelpText>System Calculated ** The sum of the &quot;Total&quot; field for all related Subscription Lines related to the active Term.</inlineHelpText>
        <label>Term Dues Total</label>
        <summarizedField>OrderApi__Renewal__c.OrderApi__Dues_Total__c</summarizedField>
        <summaryFilterItems>
            <field>OrderApi__Renewal__c.OrderApi__Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderApi__Renewal__c.OrderApi__Subscription__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OrderApi__Term_End_Date__c</fullName>
        <description>System Calculated ** The end date of the active Term.</description>
        <inlineHelpText>System Calculated ** The end date of the active Term.</inlineHelpText>
        <label>Term End Date</label>
        <summarizedField>OrderApi__Renewal__c.OrderApi__Term_End_Date__c</summarizedField>
        <summaryFilterItems>
            <field>OrderApi__Renewal__c.OrderApi__Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderApi__Renewal__c.OrderApi__Subscription__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OrderApi__Term_Start_Date__c</fullName>
        <description>System Calculated ** The start date of the active Term.</description>
        <inlineHelpText>System Calculated ** The start date of the active Term.</inlineHelpText>
        <label>Term Start Date</label>
        <summarizedField>OrderApi__Renewal__c.OrderApi__Term_Start_Date__c</summarizedField>
        <summaryFilterItems>
            <field>OrderApi__Renewal__c.OrderApi__Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderApi__Renewal__c.OrderApi__Subscription__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OrderApi__Upgraded_Date__c</fullName>
        <description>** System Calculated Override ** The date the Subscription was upgraded to another &quot;Subscription&quot; Item.</description>
        <inlineHelpText>** System Calculated Override ** The date the Subscription was upgraded to another &quot;Subscription&quot; Item.</inlineHelpText>
        <label>Upgraded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Upgraded_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated Override ** Defines the related upgraded subscription.</description>
        <inlineHelpText>** System Calculated Override ** Defines the related upgraded subscription.</inlineHelpText>
        <label>Upgraded Subscription</label>
        <referenceTo>OrderApi__Subscription__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Valid_Payment_Method__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Valid if the linked Payment Method is valid -- determined by Payment Method expiration and the result (Success or Decline) of the last E-Payment related to the Payment Method. Defaults unchecked if no Payment Method linked.</description>
        <inlineHelpText>Valid if the linked Payment Method is valid -- determined by Payment Method expiration and the result (Success or Decline) of the last E-Payment related to the Payment Method. Defaults unchecked if no Payment Method linked.</inlineHelpText>
        <label>Valid Payment Method</label>
        <type>Checkbox</type>
    </fields>
    <label>Subscription</label>
    <listViews>
        <fullName>OrderApi__All</fullName>
        <columns>NAME</columns>
        <columns>OrderApi__Customer_Link__c</columns>
        <columns>OrderApi__Status__c</columns>
        <columns>OrderApi__Subscription_Plan__c</columns>
        <columns>OrderApi__Item__c</columns>
        <columns>OrderApi__Item_Class__c</columns>
        <columns>OrderApi__Subscription_Dues_Total__c</columns>
        <columns>OrderApi__Activated_Date__c</columns>
        <columns>OrderApi__Last_Renewed_Date__c</columns>
        <columns>OrderApi__Current_Term_Start_Date__c</columns>
        <columns>OrderApi__Current_Term_End_Date__c</columns>
        <columns>OrderApi__Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Subscription ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>